# tezla

./: .gitlab-ci.yml  README.md  dune-project  example.tzl  lambda.tz  log.txt  michelscil_cfg.opam  tezla-cfg.opam  tezla.opam  tezla.opam.template
src/: adt.ml  adt.mli  ast.ml  ast.mli  converter.ml  dune  env.ml  env.mli  functional_stack.mli  location.ml  michelson.ml  michelson_ast.mli  michelson_scil.ml  michelson_scil.mli  morley.ml  morley.mli  parsing_utils.ml  pp.ml
tests/: KT18cauuZQa3p2jjDzVNA7fBtETTSaFYCBYP.tz  KT18wCGYXM829XgY1hhVPoMM69Xfd3BcsGs5.tz  KT18yQHZkVq6ZzTaLfcHoz429VnSCzaUZgNp.tz  KT191ueSknQofTzx1t8uH5nF23jdNmy6Fq4R.tz  KT196A5shEW6i4iVNnrjUfxDwCMfiRoM4wXr.tz  KT19JZKLjjfWhVquW7uhX8BW76hfy8e9ZckT.tz  KT19YuPNadVGiSca14Hx7xVgqSy44oVT4n3J.tz  KT19dpDqW9TFqJEvCFJzVKytEpZnuotGNBob.tz  KT19i6iRUg6z9DvEmJGF52Azo5XuWPtEZFfw.tz  KT19jHRkd5d7ugUGYg78RsNxfzG5DXJJwBmC.tz  KT19wiggz5c1uTvDwaonsH8fHN8Dhsi5xxzb.tz  KT1A1N85VE2Mi3zuDvKidWNy6P6Fj4iRz2rA.tz  KT1A7PqQvAK9TQo17DtzBFyy54eRgzHrevwV.tz  KT1APHbPFxNQjU93MHc7vQheHevW9rim75xE.tz  KT1ASaeYB5P8s8eT99hZDuDVmchF6qpcVvtg.tz  KT1ATxPswBFoXpD1AqzBQf5Ni5yb1gMidAvy.tz  KT1AVG16WLWkerUawtoUydDmBW7o78FNtbmj.tz  KT1AbjG7vtpV8osdoJXcMRck8eTwst8dWoz4.tz  KT1AnWaRQQNpJiEGWuSoTdwik6eQP4ZCeYTG.tz  KT1B5Lm2YFFBQGPc6vTicsgLTiYpHPpxBsSb.tz  KT1BDB21XPpn6d57daDZSvGzjrQNPt4eiEHY.tz  KT1BNuzMP54AoPNWQF45LkjhcFjW3A48rcHb.tz  KT1BRudFZEXLYANgmZTka1xCDN5nWTMWY7SZ.tz  KT1BTdDzJyFRnaVTmusbFJM8pUZygrkrsAxu.tz  KT1Bb8FfAtQsA7zrRNeebnKu4pjRS1rRArWh.tz  KT1BnsgZPtwzJoLimZpSgAzBZYZUsEqxtVhw.tz  KT1ByPhzXnt9QFgZ9nFxgoEAFsuc5Byzd6Eq.tz  (+131 more)
(+40 files in other folders)
